[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scenes/mailbox/message.gd" type="Script" id=1]

[node name="Message" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 14.0

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 22.0

[node name="Signature" type="HBoxContainer" parent="."]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 40.0

[node name="SentFrom" type="Label" parent="Signature"]
margin_right = 73.0
margin_bottom = 14.0
text = "Sent From: "

[node name="Sender" type="Label" parent="Signature"]
margin_left = 77.0
margin_right = 1020.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Date" type="Label" parent="Signature"]
margin_left = 1024.0
margin_right = 1024.0
margin_bottom = 14.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1024.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Body" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 520.0
size_flags_vertical = 3
fit_content_height = true
scroll_active = false

[node name="Footer" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 524.0
margin_right = 1024.0
margin_bottom = 538.0

[node name="Tooltip" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 542.0
margin_right = 1024.0
margin_bottom = 556.0
align = 1

[node name="OK" type="Button" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_left = 496.0
margin_top = 536.0
margin_right = 527.0
margin_bottom = 556.0
size_flags_horizontal = 4
text = "OK"

[node name="Choice" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_top = 524.0
margin_right = 936.0
margin_bottom = 544.0
alignment = 1

[node name="Yes" type="Button" parent="ScrollContainer/VBoxContainer/Choice"]
margin_left = 434.0
margin_right = 464.0
margin_bottom = 20.0
size_flags_horizontal = 4
text = "No"

[node name="No" type="Button" parent="ScrollContainer/VBoxContainer/Choice"]
margin_left = 468.0
margin_right = 502.0
margin_bottom = 20.0
size_flags_horizontal = 4
text = "Yes"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Choice/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Choice/No" to="." method="_on_No_pressed"]
